# willb-ggml

./: CMakeLists.txt  Makefile  cmake_install.cmake  ggml-config.cmake  ggml-version.cmake
include/: ggml-cpu.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  ggml-backend.cpp
src/ggml-blas/: Makefile  cmake_install.cmake
src/ggml-cpu/: CMakeLists.txt  Makefile  cmake_install.cmake  ggml-cpu.c
src/ggml-metal/: CMakeLists.txt  Makefile  cmake_install.cmake
